infrastructure/local/envoy.yaml
static_resources:
  listeners:
  - name: ingress
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match:
                  headers:
                  - name: ":authority"
                    string_match:
                      exact: "169.254.169.254"
                direct_response:
                  status: 403
                  body:
                    inline_string: "SSRF Attempt Blocked"
              - match:
                  headers:
                  - name: ":authority"
                    string_match:
                      safe_regex:
                        regex: ".*127\\.0\\.0\\..*"
                direct_response:
                  status: 403
                  body:
                    inline_string: "SSRF Attempt Blocked"
              - match:
                  prefix: "/"
                route:
                  cluster: coreason_master_gateway
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                dex_provider:
                  issuer: http://127.0.0.1:5556/dex
                  remote_jwks:
                    http_uri:
                      uri: http://dex:5556/dex/keys
                      cluster: dex_cluster
                      timeout: 1s
                    cache_duration:
                      seconds: 300
                  forward_payload_header: x-jwt-payload
              rules:
              - match:
                  prefix: "/"
                requires:
                  provider_name: dex_provider
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: coreason_master_gateway
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: coreason_master_gateway
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: coreason-master-gateway
                port_value: 8000
  - name: dex_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: dex_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: dex
                port_value: 5556
  - name: routellm_cluster
    connect_timeout: 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: routellm_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: routellm-service
                port_value: 8000
